Fix activity card meta text alignment

--- a/sass/blocks/_stock-activity-card.sass
+++ b/sass/blocks/_stock-activity-card.sass
@@ -419,11 +419,13 @@ $block: ".stock-activity-card"
   // $Activity card meta
   &__meta
     display: block
+    max-width: 100%
     font-family: $f-sans
     font-size: 14px
     line-height: 1.2
     font-weight: 400
     color: #6d6f73
+    text-align: center
 
     &:not(:last-child)
       margin-bottom: 15px
@@ -441,7 +443,7 @@ $block: ".stock-activity-card"
 
   &__meta-line
     display: block
-    text-align-last: left
+    text-align: left
 
     &:not(:last-child)
       margin-bottom: 8px
